<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/register_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space32"
        android:layout_marginTop="@dimen/space12"
        android:text="Kayıt Ol"
        android:textColor="@color/white"
        android:textSize="@dimen/textSize30"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space12"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/space2"
            android:background="@color/white" />
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtInputLayoutTC"
        style="@style/MyTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space32"
        android:layout_marginTop="@dimen/space48"
        android:layout_marginEnd="@dimen/space32"
        android:hint="@string/login_tc_no"
        android:textColorHint="@color/white"
        app:hintTextColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextRegisterTC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textColor="@color/white"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/textSize16" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtInputLayoutNameAndSurname"
        style="@style/MyTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space32"
        android:layout_marginTop="@dimen/space8"
        android:layout_marginEnd="@dimen/space32"
        android:hint="@string/name_surname"
        android:textColorHint="@color/white"
        app:hintTextColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtInputLayoutTC">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextRegisterNameAndSurname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="@dimen/textSize16"
            android:textCursorDrawable="@null" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtInputLayoutTelephoneNo"
        style="@style/MyTextInputLayout"
        android:hint="@string/telephone_no"
        android:textColorHint="@color/white"
        app:hintTextColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space32"
        android:layout_marginTop="@dimen/space8"
        android:layout_marginEnd="@dimen/space32"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtInputLayoutNameAndSurname">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextRegisterTelephoneNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:textColor="@color/white"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/textSize16" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtInputLayoutMailAddress"
        style="@style/MyTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mail_address"
        android:textColorHint="@color/white"
        app:hintTextColor="@color/white"
        android:layout_marginStart="@dimen/space32"
        android:layout_marginTop="@dimen/space8"
        android:layout_marginEnd="@dimen/space32"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtInputLayoutTelephoneNo">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextMailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textSize16"
            android:textColor="@color/white"
            android:textCursorDrawable="@null"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/space4"
        android:text="@string/degree"
        android:textColor="@color/white"
        android:textSize="@dimen/textSize18"
        app:layout_constraintBottom_toTopOf="@+id/checkboxStudent"
        app:layout_constraintStart_toStartOf="@+id/checkboxStudent" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/checkboxStudent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space32"
        android:layout_marginTop="@dimen/space44"
        android:text="@string/student"
        android:textColor="@color/white"
        android:textSize="@dimen/textSize16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtInputLayoutMailAddress" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/checkboxLecturer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space32"
        android:text="@string/lecturer"
        android:textColor="@color/white"
        android:textSize="@dimen/textSize16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkboxStudent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/my_btn_color"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/textSize18"
        android:layout_marginStart="@dimen/space32"
        android:layout_marginTop="@dimen/space32"
        android:layout_marginEnd="@dimen/space32"
        android:text="@string/create_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkboxLecturer" />




</androidx.constraintlayout.widget.ConstraintLayout>